<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_utama"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:fontFamily="@font/block"
        android:textSize="50sp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/resep"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/log"
            android:textAlignment="center"
            android:fontFamily="@font/block"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/email"
            android:textColor="#708090"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/form_00"
            android:drawableLeft="@drawable/mail_foreground"
            android:ems="10"
            android:hint="Masukan email"
            android:inputType="textEmailAddress"
            android:textColorHint="#F5DEB3" />

        <TextView
            android:id="@+id/kunci1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:text="@string/Pass"
            android:textColor="#708090"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/kunci2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="220dp"
            android:background="@drawable/form_00"
            android:drawableLeft="@drawable/password_foreground"
            android:ems="10"
            android:hint="Masukan password"
            android:inputType="textPassword"
            android:textColorHint="#F5DEB3" />

        <Button
            android:id="@+id/login"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="71dp"
            android:layout_marginRight="71dp"
            android:backgroundTint="#87CEEB"

            android:text="@string/masuk"
            android:textColor="#fff"
            android:textSize="20sp" />


    </RelativeLayout>





    <TextView
        android:id="@+id/input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="700dp"
        android:layout_toEndOf="@+id/forgot"
        android:layout_toRightOf="@+id/forgot"
        android:onClick="isidata"
        android:text="@string/daftar"
        android:textColor="#FA8072"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="700dp"
        android:layout_marginBottom="31dp"
        android:text="@string/lupapass"
        android:textColor="#000"
        android:textSize="21sp" />


</RelativeLayout>