<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_utama"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/block"
        android:text="@string/input"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/user1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/user"
        android:textColor="#708090"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/user2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="140dp"
        android:autofillHints=""
        android:background="@drawable/daftar"
        android:hint="masukan nama"
        android:inputType="text"
        android:textColorHint="#F5DEB3" />

    <TextView
        android:id="@+id/mail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="190dp"
        android:text="@string/email"
        android:textColor="#708090"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="230dp"
        android:autofillHints=""
        android:background="@drawable/daftar"
        android:hint="masukan email"
        android:inputType="textEmailAddress"
        android:textColorHint="#F5DEB3" />


    <TextView
        android:id="@+id/pass1"
        android:layout_width="174dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="297dp"
        android:text="@string/Pass"
        android:textColor="#708090"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="134dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="268dp"
        android:layout_marginRight="268dp"
        android:text="@string/kodeRS"
        android:textColor="#708090"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/kunci2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@drawable/daftar"
        android:hint="masukan password"
        android:inputType="textPassword"
        android:textColorHint="#F5DEB3" />

    <EditText
        android:id="@+id/kodeRS"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/kunci2"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/daftar"
        android:hint="masukan password"
        android:inputType="textShortMessage"
        android:textColorHint="#F5DEB3" />

    <Button
        android:id="@+id/daftar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:backgroundTint="#87CEEB"
        android:onClick="Masuk"
        android:text="@string/submit_data"
        android:textColor="#000" />


</RelativeLayout>