<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medicin"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/medicine"
        android:layout_marginStart="150dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="150dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="150dp"
        android:padding="15dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/textView_penyakit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gejala"
            android:textColor="#AAA8A8"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/penyakit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/form_1"
            android:text=" "
            android:inputType="text" />

        <TextView
            android:id="@+id/textView_desk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/desk"
            android:textColor="#AAA8A8"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/des_obat"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/form_1"
            android:text=" "
            android:inputType="text" />


    </RelativeLayout>

    <Button
        android:id="@+id/bt_delete"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#AFEEEE"
        android:text="@string/delete"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="1dp" />

    <Button
        android:id="@+id/bt_edit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="620dp"
        android:backgroundTint="#AFEEEE"
        android:text="@string/edit"
        android:textColor="#000"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />


</RelativeLayout>