<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medicin"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/medicine" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="200dp"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gejala"
            android:textColor="#AAA8A8"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/penyakit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/form_1"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/desk"
            android:textColor="#AAA8A8"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/EmailResepTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/des_obat"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="15dp"
            android:text="@string/email"
            android:textColor="#AAA8A8"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/des_obat"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/form_1"
            android:inputType="text" />

        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/des_obat"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="58dp"
            android:background="@drawable/form_1"
            android:inputType="textEmailAddress" />


    </RelativeLayout>

    <Button
        android:id="@+id/bt_keluhan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="143dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:backgroundTint="#AFEEEE"
        android:text="@string/submit_resep_riwayat"
        android:textColor="#000"
        android:textSize="20sp" />


</RelativeLayout>